@@ -1,5 +1,7 @@
 # 1.6.1
 
+There is now [a Carbon support mailing list](http://www.freelists.org/list/carbon).
+
 ## Enhancements
 
 ### General
@@ -13,6 +15,10 @@
 ### General
 
  * No more silent errors when importing Carbon on Windows 2012 R2.
+ 
+### Certificates
+
+ * [Get-Certificate](http://get-carbon.org/help/Get-Certificate.html) fails when passed a relative path.
  
 ### File System
 
